--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet"  type="text/css" href="{% static '/css/home.css' %}">
 </head>
 <body>
 <div class="ct" id="t1">
