--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -14,14 +14,15 @@
       <div class="ct" id="t4">
          <div class="ct" id="t5">
           <ul id="menu">
-            <a href="#t1"><li class="icon fa fa-bolt" id="uno"></li></a>
+            <a href="#t1" onclick="return false;"><li class="icon fa fa-home" id="uno"></li></a>
             <a href="#t2"><li class="icon fa fa-keyboard-o" id="dos"></li></a>
             <a href="#t3"><li class="icon fa fa-rocket" id="tres"></li></a>
             <a href="#t4"><li class="icon fa fa-dribbble" id="cuatro"></li></a>
             <a href="#t5"><li class="icon fa fa-plus-circle" id="cinco"></li></a>
           </ul>
           <div class="page" id="p1">
-             <section class="icon fa fa-bolt"><span class="title">Bolt</span><span class="hint">Like this pen to see the magic!...<br> Just kidding, it won't happen anything but I'll be really happy If you do so.</span></section>
+             <section class="icon"><span class="title"><img src="{% static 'images/hari.png' %}" alt="Harikrishna" style="width:130px;border-radius: 50%;">
+             </span><span class="hint">Like this pen to see the magic!...<br> Just kidding, it won't happen anything but I'll be really happy If you do so.</span></section>
           </div>
           <div class="page" id="p2">
             <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section>
