--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -22,7 +22,7 @@
           </ul>
           <div class="page" id="p1">
              <section class="icon"><span class="title"><img src="{% static 'images/hari.png' %}" alt="Harikrishna" style="width:130px;border-radius: 50%;">
-             </span><span class="hint">Like this pen to see the magic!...<br> Just kidding, it won't happen anything but I'll be really happy If you do so.</span></section>
+             </span><span class="hint">Having 3.6 years of experience as a Python Developer position and looking for the same with a company where my skills can be used in Developing, Designing, Deployment and their application performance.</span></section>
           </div>
           <div class="page" id="p2">
             <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section>
