--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Harikrishna: Live Resume</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet"  type="text/css" href="{% static '/css/home.css' %}">
 </head>
@@ -21,8 +21,13 @@
             <a href="#t5"><li class="icon fa fa-plus-circle" id="cinco"></li></a>
           </ul>
           <div class="page" id="p1">
-             <section class="icon"><span class="title"><img src="{% static 'images/hari.png' %}" alt="Harikrishna" style="width:130px;border-radius: 50%;">
-             </span><span class="hint">Having 3.6 years of experience as a Python Developer position and looking for the same with a company where my skills can be used in Developing, Designing, Deployment and their application performance.</span></section>
+             <section class="icon">
+                 <span class="title"><img src="{% static 'images/hari.png' %}" alt="Harikrishna" style="width:130px;border-radius: 50%;"></span>
+                 <span class="hint">Having 3.6 years of experience as a Python Developer position and looking for the same with a company where my skills can be used in Developing, Designing, Deployment and their application performance.</span>
+                 <span><a href="https://github.com/Harikrishnapalla" target="_blank"><i class="fa fa-github" style="font-size: 30px;color:white;"></i></a>&nbsp;<a href="https://www.linkedin.com/in/harikrishnapy3/"><i class="fa fa-linkedin" style="font-size: 30px;color:white;"></i></a>
+</span>
+             </section>
+
           </div>
           <div class="page" id="p2">
             <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section>
