--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -14,7 +14,7 @@
       <div class="ct" id="t4">
          <div class="ct" id="t5">
           <ul id="menu">
-            <a href="#t1" onclick="return false;"><li class="icon fa fa-home" id="uno"></li></a>
+            <a href="#t1"><li class="icon fa fa-home" id="uno"></li></a>
             <a href="#t2"><li class="icon fa fa-keyboard-o" id="dos"></li></a>
             <a href="#t3"><li class="icon fa fa-rocket" id="tres"></li></a>
             <a href="#t4"><li class="icon fa fa-dribbble" id="cuatro"></li></a>
