added resume doc

--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -24,7 +24,7 @@
              <section class="icon">
                  <span class="title"><img src="{% static 'images/hari.png' %}" alt="Harikrishna" style="width:130px;border-radius: 50%;"></span>
                  <span class="hint">Having 4.4 years of experience as a Python Developer position and looking for the same with a company where my skills can be used in Designing, Developing, Deployment, Maintenance and their application performance.</span>
-                 <span><a href="https://github.com/Harikrishnapalla" target="_blank"><i class="fa fa-github" style="font-size: 30px;color:white;"></i></a>&nbsp;<a href="https://www.linkedin.com/in/harikrishnapy3/" target="_blank"><i class="fa fa-linkedin" style="font-size: 30px;color:white;"></i></a> <a><i class="fa fa-download" aria-hidden="true" style="font-size: 30px;color:white;"></i></a></span>
+                 <span><a href="https://github.com/Harikrishnapalla" target="_blank"><i class="fa fa-github" style="font-size: 30px;color:white;"></i></a>&nbsp;<a href="https://www.linkedin.com/in/harikrishnapy3/" target="_blank"><i class="fa fa-linkedin" style="font-size: 30px;color:white;"></i></a> <a href="{% static 'files/Harikrishna-Python-Developer.docx' %}"><i class="fa fa-download" aria-hidden="true" style="font-size: 30px;color:white;"></i></a></span>
              </section>
 
           </div>
