added profeesional summery

--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -29,7 +29,30 @@
 
           </div>
           <div class="page" id="p2">
-            <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section>
+            <!-- <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section> -->
+              <h5 style="text-align:center;color: black"><b>PROFESSIONAL SUMMARY:</b></h5>
+              <ol>
+                  <li>Strong hands-on experience as an individual contributor in Design, Development and Deployment of applications.</li>
+                  <li>Developed web application from scratch and Deployed and Maintained.</li>
+                  <li>Built Web application using Python, Django, Restful API, HTML, CSS, JavaScript, JQuery and Bootstrap include different Databases.</li>
+                  <li>Having Experience and Strong knowledge on latest Python and Web Technologies.</li>
+                  <li>Good experience in developing web applications implementing Model View Template architecture using Django.</li>
+                  <li>Having a Good Experience on MySQL Database and SQLite and PostgreSQL.</li>
+                  <li>Having Experience and knowledge on AWS ec2 and s3 services.</li>
+                  <li>Having Experience and knowledge on Apache Airflow.</li>
+                  <li>Good Experience on implementing celery with Redis.</li>
+                  <li>Good Experience on implementing LDAP.</li>
+                  <li>Experienced in working with various Python Integrated Development Environments like IDLE, PyCharm, Atom, Eclipse,  PyDev and Sublime Text.</li>
+                  <li>Good Experience on Detect Code Quality and Security issues by using Sonarlint.</li>
+                  <li>Good knowledge in maintaining version controls systems such as GIT. </li>
+                  <li>Good experience source code management by using Gitlab and Github.</li>
+                  <li>Experience working with Web Server like Apache (WAMP,  XAMPP).</li>
+                  <li>Good Experience on deploying web application into EC2, Go Daddy, Python anywhere.</li>
+                  <li>Having a Good Experience on MSG 91 SMS Gateway and its Dashboard.</li>
+                  <li>Having good Experience on PayUbiz Integrations and PayUbiz Dashboard.</li>
+                  <li>Strong development experience on Linux and windows based operating systems.</li>
+                  <li>Excellent Interpersonal and communication skills, efficient time management and Organization skills, ability to handle multiple tasks and work well <br> in a team environment.</li>
+              </ol>
           </div>
           <div class="page" id="p3">
             <section class="icon fa fa-rocket"><span class="title">Rocket</span></section>
