added profeesional summery

--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -30,7 +30,7 @@
           </div>
           <div class="page" id="p2">
             <!-- <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section> -->
-              <h5 style="text-align:center;color: black"><b>PROFESSIONAL SUMMARY:</b></h5>
+              <h5 style="text-align:center;color: red"><b>PROFESSIONAL SUMMARY:</b></h5>
               <ol>
                   <li>Strong hands-on experience as an individual contributor in Design, Development and Deployment of applications.</li>
                   <li>Developed web application from scratch and Deployed and Maintained.</li>
