added technical skills

--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -57,6 +57,68 @@
           <div class="page" id="p3">
 {#            <section class="icon fa fa-rocket"><span class="title">Rocket</span></section>#}
               <h5 style="text-align:center;color: red"><b>TECHNICAL SKILLS:</b></h5>
+              <table id="customers">
+                  <tr>
+                      <th>Skill</th>
+                      <th>List of Skill's</th>
+                  </tr>
+                  <tr>
+                      <td>Programming Language</td>
+                      <td>Python - 3, REST API</td>
+                  </tr>
+                  <tr>
+                      <td>Framework</td>
+                      <td>Django</td>
+                  </tr>
+                  <tr>
+                      <td>Web technologies</td>
+                      <td>HTML, CSS , JavaScript, JQuery, Bootstrap, Jinja, Json</td>
+                  </tr>
+                  <tr>
+                      <td>Database</td>
+                      <td>MySQL, SQLite and PostgreSQL</td>
+                  </tr>
+                  <tr>
+                      <td>Cloud</td>
+                      <td>ec2, s3</td>
+                  </tr>
+                  <tr>
+                      <td>Automation</td>
+                      <td>Apache Airflow, Celery, Redis</td>
+                  </tr>
+                  <tr>
+                      <td>Database Management</td>
+                      <td>Navicat, MySQL Workbench, DBeaver, HeidiSQL</td>
+                  </tr>
+                  <tr>
+                      <td>Web Server</td>
+                      <td>Apache (WAMP, XAMPP), WSGI, Go Daddy, Heroku</td>
+                  </tr>
+                  <tr>
+                      <td>CMS</td>
+                      <td>WordPress, Woo commerce, Open cart</td>
+                  </tr>
+                  <tr>
+                      <td>Operating systems</td>
+                      <td>Windows, Linux</td>
+                  </tr>
+                  <tr>
+                      <td>Version Control</td>
+                      <td>Git-Hub, Git-lab, Source tree</td>
+                  </tr>
+                  <tr>
+                      <td>IDE</td>
+                      <td>JetBrains, Eclipse, Visual Studio, Sublime-text, cmder</td>
+                  </tr>
+                  <tr>
+                      <td>Offices</td>
+                      <td>Microsoft Office , Library Office,  Open Office</td>
+                  </tr>
+                  <tr>
+                      <td>Others</td>
+                      <td>Jira , FileZilla,  PayUbiz, Putty, LDAP</td>
+                  </tr>
+              </table>
           </div>
           <div class="page" id="p4">
             <section class="icon fa fa-dribbble">
