--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -121,13 +121,36 @@
               </table>
           </div>
           <div class="page" id="p4">
-            <section class="icon fa fa-dribbble">
-              <span class="title">Dribbble</span>
-              <p class="hint">
-                <a href="https://dribbble.com/albertohartzet" target="_blank">Im ready to play, <span class="hint line-trough">invite me </span> find me</a>
-              </p>
-              <p class="hint">Already invited by <a href="http://www.dribbble.com/mrpeters" target="_blank">Stan Peters</a></p>
-            </section>
+{#            <section class="icon fa fa-dribbble">#}
+{#              <span class="title">Dribbble</span>#}
+{#              <p class="hint">#}
+{#                <a href="https://dribbble.com/albertohartzet" target="_blank">Im ready to play, <span class="hint line-trough">invite me </span> find me</a>#}
+{#              </p>#}
+{#              <p class="hint">Already invited by <a href="http://www.dribbble.com/mrpeters" target="_blank">Stan Peters</a></p>#}
+{#            </section>#}
+              <h5 style="text-align:center;color: red"><b>WORK EXPERIENCE:</b></h5>
+              <table id="customers">
+                  <tr>
+                      <th>Company</th>
+                      <th>Year</th>
+                      <th>Position</th>
+                  </tr>
+                  <tr>
+                      <td>REQS Technologies India Pvt Ltd</td>
+                      <td>March 2017 to May 2019</td>
+                      <td>Associate Software Engineer</td>
+                  </tr>
+                  <tr>
+                      <td>ZKTeco Biometrics India Pvt Ltd</td>
+                      <td>May 2019 to Jan 2021</td>
+                      <td>Python Developer (R&D)</td>
+                  </tr>
+                  <tr>
+                      <td>Indgene Pvt Ltd</td>
+                      <td>Jan 2021 to till now</td>
+                      <td>Software Engineer(Backend Developer)</td>
+                  </tr>
+              </table>
           </div>
           <div class="page" id="p5">
             <section class="icon fa fa-plus-circle">
