--- a/myportfolio/static/css/home.css
+++ b/myportfolio/static/css/home.css
@@ -30,7 +30,7 @@ html, body, .page {
 #p1 { background: darkslateblue; }
 #p2 { background: white;color: black; }
 #p3 { background: white;color: black; }
-#p4 { background: deeppink; }
+#p4 { background: white;color: black; }
 #p5 { background: rebeccapurple; }
 
 #t2:target #p2,
