--- a/myportfolio/templates/html/index.html
+++ b/myportfolio/templates/html/index.html
@@ -31,6 +31,11 @@
           <div class="page" id="p2">
             <!-- <section class="icon fa fa-keyboard-o"><span class="title">Type</span></section> -->
               <h5 style="text-align:center;color: red"><b>PROFESSIONAL SUMMARY:</b></h5>
+              <table id="customers">
+                  <tr>
+                       <th></th>
+                  </tr>
+              </table>
               <ol>
                   <li>Strong hands-on experience as an individual contributor in Design, Development and Deployment of applications.</li>
                   <li>Developed web application from scratch and Deployed and Maintained.</li>
@@ -153,13 +158,13 @@
               </table>
           </div>
           <div class="page" id="p5">
-            <section class="icon fa fa-plus-circle">
-              <span class="title">More</span>
-              <p class="hint">
-                <span>You love one page & CSS only stuff? </span><br/>
-                <a href="https://codepen.io/hrtzt/details/pgXMYb/" target="_blank">check this pen "Pure CSS One page vertical navigation"</a>
-              </p>
-            </section>
+{#            <section class="icon fa fa-plus-circle">#}
+{#              <span class="title">More</span>#}
+{#              <p class="hint">#}
+{#                <span>You love one page & CSS only stuff? </span><br/>#}
+{#                <a href="https://codepen.io/hrtzt/details/pgXMYb/" target="_blank">check this pen "Pure CSS One page vertical navigation"</a>#}
+{#              </p>#}
+{#            </section>#}
           </div>
         </div>
       </div>
